--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path: ^1.9.0
   async: ^2.11.0
   lazy_load_scrollview: ^1.3.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
