--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/production.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/production.xcscheme
@@ -126,7 +126,7 @@
       buildConfiguration = "Debug-production">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug-production"
+      buildConfiguration = "Release-production"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
